changed the color of icons

--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@
             <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Bongo</h5>
             <ul class=" grid sm:grid-cols-2 gap-5 text_4">
               <li class=" flex gap-2 text-xl justify-self-center">
-                <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
+                <img class="w-5 icon h-auto" src="Assets/Images/dog-icon.svg" alt="">
                 <span>Dog</span>
               </li>
               <li class=" flex text-xl justify-self-center">
@@ -148,7 +148,7 @@
                 <span>Brown</span>
               </li>
               <li class=" flex gap-2 text-xl justify-self-center">
-                <img class=" w-5 h-auto" src="Assets/Images/loation-icon.svg" alt="">
+                <img class="w-5 icon h-auto" src="Assets/Images/loation-icon.svg" alt="">
                 <span>Delhi</span>
               </li>
             </ul>
@@ -172,7 +172,7 @@
             <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Roblet</h5>
             <ul class=" grid sm:grid-cols-2 gap-5 text_4">
               <li class=" flex gap-2 text-xl justify-self-center">
-                <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
+                <img class=" w-5 icon  h-auto" src="Assets/Images/dog-icon.svg" alt="">
                 <span>Dog</span>
               </li>
               <li class=" flex text-xl justify-self-center">
@@ -188,7 +188,7 @@
                 <span>Brown</span>
               </li>
               <li class=" flex gap-2 text-xl justify-self-center">
-                <img class=" w-5 h-auto" src="Assets/Images/loation-icon.svg" alt="">
+                <img class=" w-5 icon h-auto" src="Assets/Images/loation-icon.svg" alt="">
                 <span>Lucknow</span>
               </li>
             </ul>
@@ -214,7 +214,7 @@
             <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Sipper</h5>
             <ul class=" grid sm:grid-cols-2 gap-5 text_4">
               <li class=" flex gap-2 text-xl justify-self-center">
-                <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
+                <img class=" w-5 icon h-auto" src="Assets/Images/dog-icon.svg" alt="">
                 <span>Dog</span>
               </li>
               <li class=" flex text-xl justify-self-center">
@@ -230,7 +230,7 @@
                 <span>Brown</span>
               </li>
               <li class=" flex gap-2 text-xl justify-self-center">
-                <img class=" w-5 h-auto" src="Assets/Images/loation-icon.svg" alt="">
+                <img class=" w-5 icon h-auto" src="Assets/Images/loation-icon.svg" alt="">
                 <span>Kashmir</span>
               </li>
             </ul>
@@ -254,7 +254,7 @@
             <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Russia</h5>
             <ul class=" grid sm:grid-cols-2 gap-5 text_4">
               <li class=" flex gap-2 text-xl justify-self-center">
-                <img class=" w-5 h-auto" src="Assets/Images/cat.png" alt="">
+                <img class=" w-5 icon h-auto" src="Assets/Images/cat.png" alt="">
                 <span>Cat</span>
               </li>
               <li class=" flex text-xl justify-self-center">
@@ -270,7 +270,7 @@
                 <span>White</span>
               </li>
               <li class=" flex gap-2 text-xl justify-self-center">
-                <img class=" w-5 h-auto" src="Assets/Images/loation-icon.svg" alt="">
+                <img class=" w-5 icon h-auto" src="Assets/Images/loation-icon.svg" alt="">
                 <span>Karnataka</span>
               </li>
             </ul>
@@ -296,7 +296,7 @@
             <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Zombo</h5>
             <ul class=" grid sm:grid-cols-2 gap-5 text_4">
               <li class=" flex gap-2 text-xl justify-self-center">
-                <img class=" w-5 h-auto" src="Assets/Images/cat.png" alt="">
+                <img class=" w-5 icon h-auto" src="Assets/Images/cat.png" alt="">
                 <span>Cat</span>
               </li>
               <li class=" flex text-xl justify-self-center">
@@ -312,7 +312,7 @@
                 <span>White</span>
               </li>
               <li class=" flex gap-2 text-xl justify-self-center">
-                <img class=" w-5 h-auto" src="Assets/Images/loation-icon.svg" alt="">
+                <img class=" w-5 icon h-auto" src="Assets/Images/loation-icon.svg" alt="">
                 <span>Kanpur</span>
               </li>
             </ul>
@@ -336,7 +336,7 @@
             <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Riksy</h5>
             <ul class=" grid grid-cols-2 gap-5 text_4">
               <li class=" flex gap-2 text-xl justify-self-center">
-                <img class=" w-5 h-auto" src="Assets/Images/rabbit.png" alt="">
+                <img class=" w-5 icon h-auto" src="Assets/Images/rabbit.png" alt="">
                 <span>Rabbit</span>
               </li>
               <li class=" flex text-xl justify-self-center">
@@ -352,7 +352,7 @@
                 <span>White</span>
               </li>
               <li class=" flex gap-2 text-xl justify-self-center">
-                <img class=" w-5 h-auto" src="Assets/Images/loation-icon.svg" alt="">
+                <img class=" w-5 icon h-auto" src="Assets/Images/loation-icon.svg" alt="">
                 <span>Kashmir</span>
               </li>
             </ul>
@@ -378,7 +378,7 @@
             <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Sheru</h5>
             <ul class=" grid sm:grid-cols-2 gap-5 text_4">
               <li class=" flex gap-2 text-xl justify-self-center">
-                <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
+                <img class=" w-5 icon h-auto" src="Assets/Images/dog-icon.svg" alt="">
                 <span>Dog</span>
               </li>
               <li class=" flex text-xl justify-self-center">
@@ -394,7 +394,7 @@
                 <span>Black</span>
               </li>
               <li class=" flex gap-2 text-xl justify-self-center">
-                <img class=" w-5 h-auto" src="Assets/Images/loation-icon.svg" alt="">
+                <img class=" w-5 icon h-auto" src="Assets/Images/loation-icon.svg" alt="">
                 <span>Kolkata</span>
               </li>
             </ul>
@@ -419,7 +419,7 @@
             <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Swaggy</h5>
             <ul class=" grid grid-cols-2 gap-5 text_4">
               <li class=" flex gap-2 text-xl justify-self-center">
-                <img class=" w-5 h-auto" src="Assets/Images/dog-icon.svg" alt="">
+                <img class=" w-5 icon h-auto" src="Assets/Images/dog-icon.svg" alt="">
                 <span>Dog</span>
               </li>
               <li class=" flex text-xl justify-self-center">
@@ -435,7 +435,7 @@
                 <span>White</span>
               </li>
               <li class=" flex gap-2 text-xl justify-self-center">
-                <img class=" w-5 h-auto" src="Assets/Images/loation-icon.svg" alt="">
+                <img class=" w-5 icon h-auto" src="Assets/Images/loation-icon.svg" alt="">
                 <span>Kashmir</span>
               </li>
             </ul>
