--- a/index.html
+++ b/index.html
@@ -500,9 +500,9 @@
     </div>
     <a href="https://github.com/akshitagupta15june/PetMe" target="_blank">
     <button class="contribute-btn"> 
-      <img src="Assets/Images/github-icon.svg" alt="GitHub">
+      <img src="Assets/Images/github-icon.png" alt="GitHub">
       Contribute </button></a>
-  </div>
+   </div>
 
   <!-- Contributors section ends -->
   
