Made changes to adopt.html navbar

--- a/adopt.html
+++ b/adopt.html
@@ -16,9 +16,14 @@
 
     <div class=" nav-links md:w-3/5">
       <ul class=" flex items-center justify-evenly text-white ">
-        <br>
-        <a class="hover:border-b-2 hover:border-solid hover:border-white" href="index.html"><b>Home</b></a>
-
+        <!-- <br> -->
+        <li>
+          <a class="hover:border-b-2 hover:border-solid hover:border-white" href="index.html"><b>Home</b></a>
+        </li>
+        <li>
+          <a href="index.html#contact">Contact</a>
+        </li>
+        <li><a href="donate.html">Donate</a></li>
       </ul>
     </div>
   </nav>
