--- a/index.html
+++ b/index.html
@@ -455,7 +455,7 @@
     <div class="w-full contact-form-container mx-auto max-w-screen-md">
       <form action="https://formspree.io/f/xayaokzl" class="bg-white shadow-md rounded px-8 pt-6 pb-8">
         <h2 class="text-2xl mt-0 mb-2">CONTACT US</h2>
-        <p class="text-gray-700 text-base">
+        <p class="text-gray-700 text-base" id="contact">
           Any issues! Fill the form below and our team will contact you shortly.
         </p>
         <br />
