--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
   <!--     Contact us section html starts from here -->
   <section class="dark:bg-gray-900 b_1 pt-20 pb-20">
     <div class="w-full contact-form-container mx-auto max-w-screen-md">
-      <form action="https://formspree.io/f/xayaokzl" class="bg-white shadow-md rounded px-8 pt-6 pb-8">
+      <form action="https://formspree.io/f/xayaokzl" method="POST" class="bg-white shadow-md rounded px-8 pt-6 pb-8">
         <p id="contact"></p>
         <h2 class="text-2xl mt-0 mb-2">CONTACT US</h2>
         <p class="text-gray-700 text-base">
