fixed pictures' background and added overflow hidden property

--- a/index.html
+++ b/index.html
@@ -121,9 +121,9 @@
     <div class="one-line-card">
       <div class="main-card card-height">
         <div class="main-img">
-          <div class="op op rounded-lg shadow-lg max-w-xs card-img-div">
+          <div class="hv rounded-lg shadow-lg max-w-xs card-img-div">
             <a href="#">
-              <img class="card-img-center-round card-img-size" src="Assets/Images/goldern-ret.jpg" alt="" />
+              <img class="card-img-size" src="Assets/Images/goldern-ret.jpg" alt="" />
             </a>
           </div>
         </div>
@@ -161,9 +161,9 @@
       </div>
       <div class="main-card card-height">
         <div class="main-img">
-          <div class="op op rounded-lg shadow-lg max-w-xs card-img-div">
+          <div class="hv rounded-lg shadow-lg max-w-xs card-img-div">
             <a href="#">
-              <img class="card-img-center-round card-img-size" src="Assets/Images/pug.jpg" alt="" />
+              <img class=" card-img-size" src="Assets/Images/pug.jpg" alt="" />
             </a>
           </div>
         </div>
@@ -203,9 +203,9 @@
     <div class="one-line-card">
       <div class="main-card card-height">
         <div class="main-img">
-          <div class="op op rounded-lg shadow-lg max-w-xs card-img-div">
+          <div class="hv rounded-lg shadow-lg max-w-xs card-img-div">
             <a href="#">
-              <img class="card-img-center-round card-img-size" src="Assets/Images/husky.jpg" alt="" />
+              <img class=" card-img-size" src="Assets/Images/husky.jpg" alt="" />
             </a>
           </div>
         </div>
@@ -243,9 +243,9 @@
       </div>
       <div class="main-card card-height">
         <div class="main-img">
-          <div class="op op rounded-lg shadow-lg max-w-xs card-img-div">
+          <div class="hv rounded-lg shadow-lg max-w-xs card-img-div">
             <a href="#">
-              <img class="card-img-center-round card-img-size" src="Assets/Images/ragdo.jpg" alt="" />
+              <img class=" card-img-size" src="Assets/Images/ragdo.jpg" alt="" />
             </a>
           </div>
         </div>
@@ -285,9 +285,9 @@
     <div class="one-line-card">
       <div class="main-card card-height">
         <div class="main-img">
-          <div class="op op rounded-lg shadow-lg max-w-xs card-img-div">
+          <div class="hv rounded-lg shadow-lg max-w-xs card-img-div">
             <a href="#">
-              <img class="card-img-center-round card-img-size" src="Assets/Images/persian.webp" alt="" />
+              <img class="card-img-size" src="Assets/Images/persian.webp" alt="" />
             </a>
           </div>
         </div>
@@ -325,9 +325,9 @@
       </div>
       <div class="main-card card-height">
         <div class="main-img">
-          <div class="op op rounded-lg shadow-lg max-w-xs card-img-div">
+          <div class="hv rounded-lg shadow-lg max-w-xs card-img-div">
             <a href="#">
-              <img class="card-img-center-round card-img-size" src="Assets/Images/angora.jpg" alt="" />
+              <img class="card-img-size" src="Assets/Images/angora.jpg" alt="" />
             </a>
           </div>
         </div>
@@ -367,9 +367,9 @@
     <div class="one-line-card">
       <div class="main-card card-height">
         <div class="main-img">
-          <div class="op op rounded-lg shadow-lg max-w-xs card-img-div">
+          <div class="hv rounded-lg shadow-lg max-w-xs card-img-div">
             <a href="#">
-              <img class="card-img-center-round card-img-size" src="Assets/Images/german.jpg" alt="" />
+              <img class=" card-img-size" src="Assets/Images/german.jpg" alt="" />
             </a>
           </div>
         </div>
@@ -408,9 +408,9 @@
       </div>
       <div class="main-card card-height">
         <div class="main-img">
-          <div class="op op rounded-lg shadow-lg max-w-xs card-img-div">
+          <div class="hv rounded-lg shadow-lg  card-img-div">
             <a href="#">
-              <img class="card-img-center-round card-img-size" src="Assets/Images/porme.jpg" alt="" />
+              <img class="card-img-size" src="Assets/Images/porme.jpg" alt="" />
             </a>
           </div>
         </div>
