--- a/index.html
+++ b/index.html
@@ -158,7 +158,7 @@
             </ul>
             <a class="self-center" href="adopt.html">
               <button type="button"
-                class="bg-color-btn rounded-lg py-3 px-16 mt-3 turn-white-hover bold-500">Adopt
+                class="btn">Adopt
                 me</button>
           </div>
         </div>
@@ -198,7 +198,7 @@
             </ul>
             <a class="self-center" href="adopt.html">
               <button type="button"
-                class="bg-color-btn rounded-lg py-3 px-16 mt-3 turn-white-hover bold-500">Adopt
+              class="btn">Adopt
                 me</button>
           </div>
         </div>
@@ -240,7 +240,7 @@
             </ul>
             <a class="self-center" href="adopt.html">
               <button type="button"
-                class="border-2 bg-color-btn rounded-lg py-3 px-16 mt-3 turn-white-hover bold-500">Adopt
+              class="btn">Adopt
                 me</button>
           </div>
         </div>
@@ -280,7 +280,7 @@
             </ul>
             <a class="self-center" href="adopt.html">
               <button type="button"
-                class="border-2 bg-color-btn rounded-lg py-3 px-16 mt-3 turn-white-hover bold-500">Adopt
+              class="btn">Adopt
                 me</button>
           </div>
         </div>
@@ -322,7 +322,7 @@
             </ul>
             <a class="self-center" href="adopt.html">
               <button type="button"
-                class="border-2 bg-color-btn rounded-lg py-3 px-16 mt-3 turn-white-hover bold-500">Adopt
+              class="btn">Adopt
                 me</button>
           </div>
         </div>
@@ -362,7 +362,7 @@
             </ul>
             <a class="self-center" href="adopt.html">
               <button type="button"
-                class="bg-color-btn rounded-lg py-3 px-16 mt-3 turn-white-hover bold-500">Adopt
+              class="btn">Adopt
                 me</button>
           </div>
         </div>
@@ -404,7 +404,7 @@
             </ul>
             <a class="self-center" href="adopt.html">
               <button type="button"
-                class="border-2 bg-color-btn rounded-lg py-3 px-16 mt-3 turn-white-hover bold-500">Adopt
+              class="btn">Adopt
                 me</button>
             </a>
           </div>
@@ -445,7 +445,7 @@
             </ul>
             <a class="self-center" href="adopt.html">
               <button type="button"
-                class="border-2 bg-color-btn rounded-lg py-3 px-16 mt-3 turn-white-hover bold-500">Adopt
+              class="btn">Adopt
                 me</button>
             </a>
           </div>
