Added Toggle icons

--- a/index.html
+++ b/index.html
@@ -97,12 +97,8 @@
               </button>
             </a>
           </li>
-
           <li>
-
-            <button id="theme-toggle" class=" text_4">
-              Toggle Theme
-            </button>
+            <a id="theme-toggle"><img src="Assets/Images/sun.svg" width="50px" id="switch"></a>
           </li>
         </ul>
         <br>
