--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div> -->
     </div>
     <button data-collapse-toggle="navbar-default" type="button"
-    class="absolute top-4 right-4 sm:inline-flex sm:items-center p-2  focus:outline-none  text_4 "
+    class="absolute top-4 right-4 sm:inline-flex sm:items-center p-2 lg:hidden focus:outline-none  text_4 "
       aria-controls="navbar-default" aria-expanded="false" id="nav-button">
       <span class="sr-only">Open main menu</span>
       <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
