--- a/index.html
+++ b/index.html
@@ -485,7 +485,7 @@
         class="bg-gray-100 rounded-md bg-clip-padding backdrop-filter backdrop-blur-sm bg-opacity-20 border border-gray-100 px-8 pt-6 pb-8">
         <p id="contact"></p>
         <h2 class="text-3xl mt-1 mb-2 text-center bold-500 text-black">CONTACT US</h2>
-        <p class="text-white text-base text-center">
+        <p class="text-black text-base text-center">
           Any issues! Fill the form below and our team will contact you shortly.
         </p>
         <br />
