added adopt me button on the home page

--- a/index.html
+++ b/index.html
@@ -17,6 +17,7 @@
   <link rel="icon" type="image/x-icon" href="/Assets/Images/logo.ico">
   <script defer src="https://unpkg.com/alpinejs@3.2.4/dist/cdn.min.js"></script>
   <link href="https://unpkg.com/tailwindcss@^2/dist/tailwind.min.css" rel="stylesheet">
+  <script src="https://kit.fontawesome.com/b70d731558.js" crossorigin="anonymous"></script>
   <title>PetMe</title>
 </head>
 
@@ -37,7 +38,7 @@
       </div> -->
     </div>
     <button data-collapse-toggle="navbar-default" type="button"
-    class="absolute top-4 right-4 sm:inline-flex sm:items-center p-2 lg:hidden focus:outline-none  text_4 "
+      class="absolute top-4 right-4 sm:inline-flex sm:items-center p-2 lg:hidden focus:outline-none  text_4 "
       aria-controls="navbar-default" aria-expanded="false" id="nav-button">
       <span class="sr-only">Open main menu</span>
       <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
@@ -102,7 +103,7 @@
             <a id="theme-toggle"><img src="Assets/Images/sun.svg" width="50px" id="switch"></a>
           </li>
         </ul>
-        
+
       </div>
 
     </nav>
@@ -114,6 +115,10 @@
         <div class="main-body-heading-text">
           <h1 class="heading-main-body-h1">Adopt Me</h1>
           <div class="heading-main-body-moto">Give life to a needed animal</div>
+          <div class="custom-btn"><a href="http://127.0.0.1:5500/adopt.html">
+          <button class="adopt-btn">Adopt me </a><i class="fa-solid fa-cat"></i></button>
+        </a>
+          </div>
         </div>
       </div>
     </div>
@@ -578,7 +583,7 @@
       <!-- Subscribe column end -->
 
       <!-- Social icons  -->
-      <div class="m-5 lg:m-0 footer-component">
+       <div class="m-5 lg:m-0 footer-component">
         <div class="text-2xl">Follow us on</div>
         <div class="flex flex-row space-x-3 my-0">
           <div>
