Fixed colors on hover and non interactive feel of logo and theme switcher

--- a/donate.html
+++ b/donate.html
@@ -43,19 +43,19 @@
       <ul
         class="w-[100vw] h-1/2 top-0 right-0 p-4 text-center space-y-8 lg:space-y-0 lg:space-x-3 lg:static lg:w-auto flex flex-col rounded-lg border border-gray-100 items-center lg:bg-transparent lg:border-0 lg:flex-row justify-center">
         <li><a href="./index.html"
-            class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover">Home</a></li>
+            class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Home</a></li>
         <li><a href="./index.html#About"
-            class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover">About Us</a>
+            class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">About Us</a>
         </li>
         <li><a href="./blog.html"
-            class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover">Blogs</a></li>
+            class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Blogs</a></li>
         <li><a href="#"
-            class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover">Donate
+            class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Donate
             Animals</a></li>
         <li>
           <div x-data="{ open: false }" @mouseleave="open = false" class="relative">
             <a @mouseover="open = true"
-              class="p-3 text-custom-heading flex font-bold hover:underline underline-offset-4 turn-red-hover">
+              class="p-3 text-custom-heading flex font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">
               Support Us
               <svg xmlns="http://www.w3.org/2000/svg" width="18px" height="18px" fill="none" viewBox="0 0 24 24"
                 stroke="currentColor" class="mt-1">
@@ -73,7 +73,7 @@
           </div>
         </li>
         <li><a href="./reportstary.html"
-            class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover">SOS
+            class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">SOS
             Report</a></li>
 
 
