--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
   <header
     class=" text-gray-400 bg-header-offwhite body-font flex flex-row items-center justify-center lg:justify-around">
     <div class="flex flex-row items-center md:flex-row md:items-center p-5" id="logo">
-      <span class="mission-1"> Saving Lives </span>
+      <span class="mission-1 mission-dark"> Saving Lives </span>
       <a class="logo-border" href="#">
         <img class="rounded-full logo-size" src="./Assets/Images/logo.jpg" alt="logo" />
       </a>
-      <span class="mission-2"> Saving Animals </span>
+      <span class="mission-2 mission-dark"> Saving Animals </span>
       <!--
       <div class="w-full mt-8 md:mt-0">
         <h1 class="text-4xl text_2  text-center md:text-left md:ml-12 uppercase font-serif font-bold " id = "heading-adopt-me">Adopt
@@ -52,19 +52,19 @@
         <ul
           class="w-[100vw] h-1/2 top-0 right-0 p-4 text-center space-y-8 lg:space-y-0 lg:space-x-3 lg:static lg:w-auto flex flex-col rounded-lg border border-gray-100 items-center lg:bg-transparent lg:border-0 lg:flex-row justify-center">
           <li><a href="#"
-              class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover">Home</a></li>
+              class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Home</a></li>
           <li><a href="#About"
-              class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover">About Us</a>
+              class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">About Us</a>
           </li>
           <li><a href="./blog.html"
-              class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover">Blogs</a></li>
+              class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Blogs</a></li>
           <li><a href="./donate.html"
-              class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover">Donate
+              class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Donate
               Animals</a></li>
           <li>
             <div x-data="{ open: false }" @mouseleave="open = false" class="relative">
               <a @mouseover="open = true"
-                class="p-3 text-custom-heading flex font-bold hover:underline underline-offset-4 turn-red-hover">
+                class="p-3 text-custom-heading flex font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">
                 Support Us
                 <svg xmlns="http://www.w3.org/2000/svg" width="18px" height="18px" fill="none" viewBox="0 0 24 24"
                   stroke="currentColor" class="mt-1">
@@ -82,7 +82,7 @@
             </div>
           </li>
           <li><a href="./reportstary.html"
-              class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover">SOS
+              class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">SOS
               Report</a></li>
 
 
