feat(contact-us): added contact form validations

--- a/index.html
+++ b/index.html
@@ -495,7 +495,7 @@
           </label>
           <input
             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline"
-            id="contact_nom" name="contact_nom" type="text" placeholder="Username">
+            id="contact_nom" name="contact_nom" type="text" placeholder="Name">
         </div>
         <div class="mb-6">
           <label class="block text-gray-700 text-sm font-bold mb-2" for="contact_email">
@@ -503,19 +503,19 @@
           </label>
           <input
             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline"
-            id="contact_email" name="contact_email" type="email" placeholder="hello@petme">
+            id="contact_email" name="contact_email" type="email" required placeholder="hello@petme">
         </div>
         <div class="mb-6">
           <label for="contact_message" class="block text-gray-700 text-sm font-bold mb-2">Message</label>
           <textarea
             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline"
-            id="contact_message" name="contact_message" rows="6" placeholder="Your message"></textarea>
+            id="contact_message" name="contact_message" required rows="6" placeholder="Your message"></textarea>
         </div>
         <div class="flex mx-72">
           <button
             class="bg-gray-500 hover:bg-gray-700 text-center text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
             type="submit">
-            Contact us
+            Contact Us
           </button>
         </div>
       </form>
