make card responsive on medium screen

--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
       </div> -->
     </div>
     <button data-collapse-toggle="navbar-default" type="button"
-    class="absolute top-4 right-4 sm:inline-flex sm:items-center p-2 lg:hidden focus:outline-none  text_4 "
+      class="absolute top-4 right-4 sm:inline-flex sm:items-center p-2 lg:hidden focus:outline-none  text_4 "
       aria-controls="navbar-default" aria-expanded="false" id="nav-button">
       <span class="sr-only">Open main menu</span>
       <svg class="w-6 h-6" aria-hidden="true" fill="currentColor" viewBox="0 0 20 20"
@@ -52,12 +52,15 @@
         <ul
           class="w-[100vw] h-1/2 top-0 right-0 p-4 text-center space-y-8 lg:space-y-0 lg:space-x-3 lg:static lg:w-auto flex flex-col rounded-lg border border-gray-100 items-center lg:bg-transparent lg:border-0 lg:flex-row justify-center">
           <li><a href="#"
-              class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Home</a></li>
+              class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Home</a>
+          </li>
           <li><a href="#About"
-              class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">About Us</a>
+              class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">About
+              Us</a>
           </li>
           <li><a href="./blog.html"
-              class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Blogs</a></li>
+              class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Blogs</a>
+          </li>
           <li><a href="./donate.html"
               class="p-3 text-custom-heading font-bold hover:underline underline-offset-4 turn-red-hover navbar-item">Donate
               Animals</a></li>
@@ -102,7 +105,7 @@
             <a id="theme-toggle"><img src="Assets/Images/sun.svg" width="50px" id="switch"></a>
           </li>
         </ul>
-        
+
       </div>
 
     </nav>
@@ -163,7 +166,7 @@
         <div class="main-text">
           <div class="p-4 flex flex-col gap-2">
             <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Bongo</h5>
-            <ul class=" grid sm:grid-cols-2 gap-5 text_4">
+            <ul class=" grid grid-cols-2 gap-5 text_4">
               <li class=" flex gap-2 text-xl justify-self-center">
                 <img class="w-5 icon h-auto" src="Assets/Images/dog-icon.svg" alt="">
                 <span>Dog</span>
@@ -202,7 +205,7 @@
         <div class="main-text">
           <div class="p-4 flex flex-col gap-2">
             <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Roblet</h5>
-            <ul class=" grid sm:grid-cols-2 gap-5 text_4">
+            <ul class=" grid grid-cols-2 gap-5 text_4">
               <li class=" flex gap-2 text-xl justify-self-center">
                 <img class=" w-5 icon  h-auto" src="Assets/Images/dog-icon.svg" alt="">
                 <span>Dog</span>
@@ -244,7 +247,7 @@
         <div class="main-text">
           <div class="p-4 flex flex-col gap-2">
             <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Sipper</h5>
-            <ul class=" grid sm:grid-cols-2 gap-5 text_4">
+            <ul class=" grid grid-cols-2 gap-5 text_4">
               <li class=" flex gap-2 text-xl justify-self-center">
                 <img class=" w-5 icon h-auto" src="Assets/Images/dog-icon.svg" alt="">
                 <span>Dog</span>
@@ -283,7 +286,7 @@
         <div class="main-text">
           <div class="p-4 flex flex-col gap-2">
             <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Russia</h5>
-            <ul class=" grid sm:grid-cols-2 gap-5 text_4">
+            <ul class=" grid grid-cols-2 gap-5 text_4">
               <li class=" flex gap-2 text-xl justify-self-center">
                 <img class=" w-5 icon h-auto" src="Assets/Images/cat.png" alt="">
                 <span>Cat</span>
@@ -324,7 +327,7 @@
         <div class="main-text">
           <div class="p-4 flex flex-col gap-2">
             <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Zombo</h5>
-            <ul class=" grid sm:grid-cols-2 gap-5 text_4">
+            <ul class=" grid grid-cols-2 gap-5 text_4">
               <li class=" flex gap-2 text-xl justify-self-center">
                 <img class=" w-5 icon h-auto" src="Assets/Images/cat.png" alt="">
                 <span>Cat</span>
@@ -406,7 +409,7 @@
         <div class="main-text">
           <div class="p-4 flex flex-col gap-2">
             <h5 class="text_3  md:text-[40px] font-bold mb-2 text-center">Sheru</h5>
-            <ul class=" grid sm:grid-cols-2 gap-5 text_4">
+            <ul class=" grid grid-cols-2 gap-5 text_4">
               <li class=" flex gap-2 text-xl justify-self-center">
                 <img class=" w-5 icon h-auto" src="Assets/Images/dog-icon.svg" alt="">
                 <span>Dog</span>
