--- a/index.html
+++ b/index.html
@@ -514,7 +514,7 @@
             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline"
             id="contact_message" name="contact_message" required rows="6" placeholder="Your message"></textarea>
         </div>
-        <div class="flex mx-72">
+        <div class="flex justify-center">
           <button
             class="bg-gray-500 hover:bg-gray-700 text-center text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
             type="submit">
