fix: footer for smaller screensizes

--- a/index.html
+++ b/index.html
@@ -549,7 +549,7 @@
     <div class="flex-footer">
       <div class="footer-component">
 
-        <div class="flex flex-row space-x-5 fix">
+        <div class="flex flex-row space-x-5">
           <div>
 
             <img class="rounded-full w-24 hover:shadow-md cursor-pointer" src="./Assets/Images/logo.jpg" alt="logo" />
