Contact Us CSS fixed for smaller screen sizes

--- a/index.html
+++ b/index.html
@@ -514,9 +514,9 @@
             class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:shadow-outline"
             id="contact_message" name="contact_message" required rows="6" placeholder="Your message"></textarea>
         </div>
-        <div class="flex mx-72">
+        <div class="flex">
           <button
-            class="bg-gray-800 hover:bg-gray-900 text-center text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline"
+            class="bg-gray-800 hover:bg-gray-900 text-center text-white font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline mx-auto"
             type="submit">
             Contact Us
           </button>
