--- a/index.html
+++ b/index.html
@@ -140,14 +140,18 @@
       </h2>
       <p class="mb-8 lg:mb-16 font-light text-center text-gray-500 dark:text-gray-400 sm:text-xl text_4">A Platform that
         allows animals to be adopted, donated to pet lovers, and provides emergency medical care to stray animals in
-        need. This Platform also provide significant features like <b>Animal Adoption</b>, <b>Pet Donation</b>. Also
-        provides <b>SOS report</b> for stray animal in harsh conditions they can fill out the details and a
+        need. This Platform also provide significant features like <a class="hover-underline-animation"
+          href="#adopt"><b>Animal Adoption</b></a>, <a class="hover-underline-animation" href="./donate.html"><b>Pet
+            Donation</b></a>. Also
+        provides <a class="hover-underline-animation" href="./reportstary.html"><b>SOS report</b></a> for stray animal
+        in harsh conditions they can fill
+        out the details and a
         representative will reach the location to assist the animal with medical aid.</p>
     </div>
   </section>
 
   <!-- About Us section  html ends here -->
-  <div class="heading">
+  <div class="heading" id="adopt">
     <h1 class="meet-heading">
       Meet our Friends Here
     </h1>
