--- a/adopt.html
+++ b/adopt.html
@@ -142,7 +142,7 @@
           Contact Number
           <span class="hint">(optional)</span>
         </label>
-        <input type="tel" min="1" name="tel" id="tel" class="form-control" placeholder="+91 1023456789" />
+        <input type="text"  name="tel" id="tel" class="form-control" placeholder="+91 1023456789" oninput="this.value = this.value.replace(/[^0-9\+\.]/g, '').replace(/(\..*)\./g, '$1');"/>
       </div>
 
       <div class="form-group">
