fix console error on scroll,by adding missing id

--- a/reportstary.html
+++ b/reportstary.html
@@ -22,7 +22,7 @@
 </head>
 
 <body>
-  <header
+  <header id="header"
     class=" text-gray-400 bg-header-offwhite body-font flex flex-row items-center justify-center lg:justify-around">
     <div class="flex flex-row items-center md:flex-row md:items-center p-5" id="logo">
       <span class="mission-1 mission-dark"> Saving Lives </span>
